src/objects/InternalParticipant__c.object
<CustomObject>
    <description>TFUS-000004621
Object used to track Campaign Member Participants that are employees (Users)</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Internal Participants</relationshipLabel>
        <relationshipName>Internal_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invited</fullName>
                    <default>true</default>
                    <label>Invited</label>
                </value>
                <value>
                    <fullName>Attended</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Internal Participant</label>
    <nameField>
        <displayFormat>Participant-{0000}</displayFormat>
        <label>Internal Participant #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>